--- a/CSB/EPG2/Presentation/Frames/Del11.tex
+++ b/CSB/EPG2/Presentation/Frames/Del11.tex
@@ -86,11 +86,13 @@
     \begin{itemize}
     \item Simpsons regel er givet ved formlen 
     \begin{align*}
-    S_2 = \frac{(b-a)}{6}(f(a)+4f(\frac{a+b}{2})+f(b)=\frac{\widetilde{h}}{3}(f(a)+4f(\frac{a+b}{2})+f(b))
+    S_2 &= \frac{(b-a)}{6}(f(a)+4f(\frac{a+b}{2})+f(b)\\
+    &=\frac{\widetilde{h}}{3}(f(a)+4f(\frac{a+b}{2})+f(b))
     \end{align*}
     \item Det interpolerende polynomium fundet via Simpsons regel er givet ved formlen
     \begin{align*}
-    P_{S}(x)=f(a)\frac{(x-m)(x-b)}{(a-m)(a-b)}+f(m)\frac{(x-a)(x-b)}{(m-a)(m-b)}+f(b)\frac{(x-a)(x-m)}{(b-a)(b-m)}.
+    P_{S}(x)=f(a)\frac{(x-m)(x-b)}{(a-m)(a-b)}&+f(m)\frac{(x-a)(x-b)}{(m-a)(m-b)}\\
+    &+f(b)\frac{(x-a)(x-m)}{(b-a)(b-m)}.
     \end{align*}
        \end{itemize}
 \end{frame}
@@ -99,7 +101,8 @@
 \begin{frame}{Interpolerende kvadraturregler: Fejlled Simpson}
     Fejlleddet for Simpsons regel er givet ved 
     \begin{align*}
-    \int_{a}^{b}f(x)dx-\frac{\Tilde{h}}{3}\left [ f(a)+4f(a+h) + f(b) \right ]=-\frac{(b-a)\Tilde{h}^4}{180}{f}^{(4)}(\xi_S)
+    \int_{a}^{b}f(x)dx-\frac{\Tilde{h}}{3}\left [ f(a)+4f(a+h) + f(b) \right ]\\
+    =-\frac{(b-a)\Tilde{h}^4}{180}{f}^{(4)}(\xi_S)
     \end{align*}
     \include{images/Simpsons}
 \end{frame}
