--- a/CSB/EPG2/Presentation/Frames/Del22.tex
+++ b/CSB/EPG2/Presentation/Frames/Del22.tex
@@ -16,9 +16,9 @@ y_{n+1}&=y_n+\frac{h}{6}(k_1+2k_2+2k_3+k_4)
 \frametitle{Simpsons regel}
 %Hvis funktionen afhænger af en koordinat så svarer $k_1$ til startpunktet, $k_4$ til endepunktet og $k_2$ og $k_3$ bliver i midtpunktet
 \begin{align*}
-\int_a^bf(x)dx &\approx \frac{b-a}{6} \left( f(a)+4f \left( \frac{a+b}{2} \right) f(a+b)+f(b) \right)\\
+\int_a^bf(x)dx &\approx \frac{b-a}{6} \left( f(a)+4f \left( \frac{a+b}{2} \right)+f(b) \right)\\
 h&=b-a\\
-y_0+\int_a^bf(x)dx &\approx y_0+ \frac{h}{6} \left( f(a)+4f \left( \frac{h}{2} \right) f(h)+f(b) \right)\\
+y_0+\int_a^bf(x)dx &\approx y_0+ \frac{h}{6} \left( f(a)+4f \left( \frac{a+b}{2} \right)+f(b) \right)\\
 y_{n+1}&=y_0+(k_1+2k_2+2k_3+k_4)
 \end{align*}
 \end{frame}
