Update Del14a.tex, Del21.tex, and 3 more files...

--- a/CSB/EPG1/Presentation/Frames/Del14a.tex
+++ b/CSB/EPG1/Presentation/Frames/Del14a.tex
@@ -1,6 +1,15 @@
 % MADS
 \subsection{Numerisk eksperiment}
 \begin{frame}
+\frametitle{Eksempel}
+\begin{itemize}
+\item $L=150$ og $s=15$
+\end{itemize}
+\begin{align*}
+\lambda \text{cosh}\left( \frac{75}{\lambda} \right) = \lambda + 15,
+\end{align*} 
+\end{frame}
+\begin{frame}
 \frametitle{Nulpunktbestemmelse med \phantom{Heeekjjjjeej} bisektion og Newton}
 \begin{itemize}
 \item Bisektion finder altid et svar
