--- a/CSB/EPG1/Presentation/Frames/Del21.tex
+++ b/CSB/EPG1/Presentation/Frames/Del21.tex
@@ -1,7 +1,7 @@
 %\begin{frame}{Opgave 1: Lagrange-interpolation}
 %    Gennemgå teorien for Lagrange interpolation baseret på datapunkterne $x_0, \ldots, x_N$ og $f_0, f_1, \ldots , f_N$. 
 %\end{frame}
-
+\subsection{Lagrange-interpolation}
 \begin{frame}{Lagrange-interpolation}
     \begin{itemize}
         \item Lagrange-interpolation finder et polynomium $p(x_k)=f(x_k)$ af mindst mulig grad % og er således en måde at approksimere en funktionsværdi givet $x_0 \ldots x_N$ og $N+1 $  $y$ værdier.
