--- a/CSB/EPG2/Presentation/Frames/Del11.tex
+++ b/CSB/EPG2/Presentation/Frames/Del11.tex
@@ -5,7 +5,7 @@
 %    Angiv grad af præcision for de tre ovennævnte regler. 
 %    Svarene skal begrundes.
 %\end{frame}
-
+\subsection{Kvadraturregler}
 \begin{frame}{Interpolerende kvadraturregler}
 
 \begin{itemize}
