--- a/CSB/EPG2/Presentation/Frames/Del14.tex
+++ b/CSB/EPG2/Presentation/Frames/Del14.tex
@@ -14,7 +14,7 @@
 %    \end{align}
 %    % 
 %\end{frame}
-
+\subsection{Numerisk eksperiment}
 \begin{frame}{Approksimation af integralet}
 \begin{align*}
 f(x) = 
