Update Del12.tex and TRAPEZ12.png

--- a/CSB/EPG2/Presentation/Frames/Del12.tex
+++ b/CSB/EPG2/Presentation/Frames/Del12.tex
@@ -1,14 +1,11 @@
-\begin{frame}{Opgave 2: Sammensat kvadraturregel}
-    Forklar idéen i en sammensat kvadraturregel. Udled den sammensatte kvadraturregel
-    $T_N$.
-\end{frame}
-
 \begin{frame}{Sammensat kvadraturregel}
 Trapez-reglen er som sagt, som følger
     \begin{align*}
     T = \frac{h}{2}(f(a)+f(b)),
     \end{align*}
+\begin{center}
 \includegraphics[scale=0.4]{images/TRAPEZZI.png}
+\end{center}
 \end{frame}
 
 \begin{frame}{Sammensat kvadraturregel}
@@ -25,8 +22,9 @@ Man tager sit interval fra a til b og inddeler i ækvidistante inddelinger, hvor
     T_2=\frac{h}{2}(f(a)+f(a+h))+\frac{h}{2}(f(a+h)+f(b) \\
     = \frac{h}{2}(f(a)+2f(a+h)+f(b),
     \end{align*}
-    hvor $h=\frac{b-a}{2}$. \\
-\includegraphics[width=40mm,scale=0.2]{images/TRAPEZ12.png}   
+\begin{center}
+\includegraphics[width=50mm]{images/TRAPEZ12.png}
+\end{center}
 \end{frame}
 
 
@@ -39,6 +37,7 @@ Dernæst er det videre muligt, at opskrive den generelle formel for den sammensa
     \begin{align*}
     T_n =\frac{h}{2}\left ((f(a)+2\sum_{k=1}^{N-1}f(a+kh)+f(b) \right )
     \end{align*}
+\includegraphics[scale=0.3]{images/TRAPEZSAM.png}
 \end{frame}
 
 %%%%
