Update Del26.tex, Del12.tex, and 5 more files...

--- a/CSB/EPG2/Presentation/Frames/Del12.tex
+++ b/CSB/EPG2/Presentation/Frames/Del12.tex
@@ -19,8 +19,8 @@ Man tager sit interval fra a til b og inddeler i ækvidistante inddelinger, hvor
 \begin{frame}{Sammensat kvadraturregel}
     For at udlede trapez-reglen, så den gælder for to underinddelinger, så får man følgende 
     \begin{align*}
-    T_2=\frac{h}{2}(f(a)+f(a+h))+\frac{h}{2}(f(a+h)+f(b) \\
-    = \frac{h}{2}(f(a)+2f(a+h)+f(b),
+    T_2=\frac{h}{2}(f(a)+f(a+h))+\frac{h}{2}(f(a+h)+f(b)) \\
+    = \frac{h}{2}(f(a)+2f(a+h)+f(b)),
     \end{align*}
 \begin{center}
 \includegraphics[width=50mm]{images/TRAPEZ12.png}
