--- a/CSB/EPG2/Presentation/Frames/Del21_2.tex
+++ b/CSB/EPG2/Presentation/Frames/Del21_2.tex
@@ -1,7 +1,7 @@
 \begin{frame}
 \frametitle{Modificeret Euler metode og \phantom{HHHHHHH} trapezmetoden}
 \begin{itemize}
-\item Modifiveret Euler metode anvendt på $$\frac{dy}{dx}=f(x),\phantom{hi}y(a)=y_0$$
+\item Modificeret Euler metode anvendt på $$\frac{dy}{dx}=f(x),\phantom{hi}y(a)=y_0$$
 \item Trapezmetoden anvendt på $$y_0 + \int_a^b f(x) dx$$
 \end{itemize}
 \end{frame}
