Update Del11.tex and Del21_2.tex

--- a/CSB/EPG2/Presentation/Frames/Del11.tex
+++ b/CSB/EPG2/Presentation/Frames/Del11.tex
@@ -86,7 +86,7 @@
     \begin{itemize}
     \item Simpsons regel er givet ved formlen 
     \begin{align*}
-    S_2 &= \frac{(b-a)}{6}(f(a)+4f(\frac{a+b}{2})+f(b)\\
+    S_2 &= \frac{(b-a)}{6}(f(a)+4f(\frac{a+b}{2})+f(b))\\
     &=\frac{\widetilde{h}}{3}(f(a)+4f(\frac{a+b}{2})+f(b))
     \end{align*}
     \item Det interpolerende polynomium fundet via Simpsons regel er givet ved formlen
