--- a/CSB/EPG2/Presentation/Frames/Del21_2.tex
+++ b/CSB/EPG2/Presentation/Frames/Del21_2.tex
@@ -16,7 +16,7 @@ k_1 &= f(x_n)\\
 k_2 &= f(x_{n+1} )\\
 y_{n+1} &= y_n + \frac{h}{2}(k_1 + k_2)\\
 &\downarrow\\
-y_N &= y_0 + \frac{h}{2}\left( f(x_0) + 2(f(x_1) + \cdots + f(x_{N-1})) + f(x_N) ) \right)\\
+y_N &= y_0 + \frac{h}{2}\left( f(x_0) + 2(f(x_1) + \cdots + f(x_{N-1})) + f(x_N) \right)\\
  &= y_0 + \frac{h}{2}\left(f(a) + 2\sum_{j=1}^{N-1}f(x_j) + f(b)\right)
 \end{align*}
 \end{itemize}
