Update Del11.tex and Del14.tex

--- a/CSB/EPG2/Presentation/Frames/Del14.tex
+++ b/CSB/EPG2/Presentation/Frames/Del14.tex
@@ -79,7 +79,7 @@ f(x) =
     \end{itemize}
     
 $$\begin{array}{l|c|c|c}
-\text{Metode} & \text{Inddelinger}& \text{Orden}^2 & \text{Orden}\\
+\text{Metode} & \text{Inddelinger}& 2^\text{Orden} & \text{Orden}\\
 \hline
 \text{Midtpunkt}	& 64		& 4 	&2\\
 \text{Trapez}		& 64		& 4 	&2\\
