--- a/CSB/EPG2/Presentation/Frames/Del21.tex
+++ b/CSB/EPG2/Presentation/Frames/Del21.tex
@@ -96,7 +96,7 @@ k_2 & = f \left( x_n + \frac{2}{3} h , y_n  + \frac{2}{3} h k_1 \right) \\
 \begin{minipage}[t]{0.31\textwidth}
 \begin{align*}
 x_{n+1} & = x_n+h \\
-y_{n+1} & = y_n + \frac{h}{4} (k_1 + k_2 )  \\
+y_{n+1} & = y_n + \frac{h}{4} (k_1 + 3k_2 )  \\
 \end{align*}
 %
 \end{minipage} 
