Update Losning.tex, Master.tex, and 5 more files...

--- a/Presentation/Frames/Losning.tex
+++ b/Presentation/Frames/Losning.tex
@@ -20,3 +20,31 @@ Løsning af lineær optimeringsproblemer
 \item Lokal $\rightarrow$ Global (omkring fig 3.9)
 \end{itemize}
 \end{frame}
+
+\begin{frame}
+\frametitle{Grafisk løsning}
+\input{img/opti_loes1}
+\end{frame}
+
+%\begin{frame}
+%\frametitle{Grafisk løsning}
+%
+%\input{img/opti_loes1}
+%
+%%\input{img/opti_loes2}
+%%
+%%\input{img/opti_loes3}
+%%
+%%\input{img/opti_loes4}
+%
+%\begin{itemize}
+%\item Intro til løsninger fra afsnit 2
+%%De fire punkter fra raporten (angående løsninger)
+%\item Standardform.
+%\item Eventuelt dualproblemer som sidebemærkning. Hvis vi skal have det med måske en bemærkning om spilteori og nulsum(slackvariable løsning for dual).
+%\item Polyedre og repræsentation(herunder standardform)
+%\item Det konvekse hylster.
+%\item Injektiv og surjektiv (bijektiv)
+%\item Lokal $\rightarrow$ Global (omkring fig 3.9)
+%\end{itemize}
+%\end{frame}
