--- a/Presentation/Master.tex
+++ b/Presentation/Master.tex
@@ -54,6 +54,7 @@
 \usepackage{media9}
 \usepackage{multimedia}
 \mathtoolsset{showonlyrefs}
+\usepackage{pgfplots}
 
 \usetikzlibrary{arrows.meta}
 \usetikzlibrary{positioning,calc}
@@ -165,6 +166,24 @@
 \newcommand{\U}{\mathcal{U}}
 \newcommand{\Y}{\mathcal{Y}}
 \newcommand{\B}{\mathcal{B}}
+
+% Colors 
+\definecolor{AAUblue1}{RGB}{ 33, 26, 82}
+\definecolor{AAUblue2}{RGB}{ 89, 79,191}
+\definecolor{AAUgrey1}{RGB}{ 84, 97,110}
+\definecolor{AAUgrey2}{RGB}{104,119,132}
+\definecolor{AAUgrey3}{RGB}{162,172,182}
+\definecolor{AAUgrey4}{RGB}{222,223,226}
+\definecolor{AAUgreen}{RGB}{157,187, 29}
+\definecolor{AAUteal} {RGB}{ 94,150,149}
+\definecolor{AAUred}  {RGB}{223,103, 82}
+%farvet-commands
+\definecolor{myblue}{RGB}{89, 79, 191}
+\definecolor{mygreen}{RGB}{157, 187, 29}
+\definecolor{myred}{RGB}{223, 103, 82}
+\definecolor{mygrey}{RGB}{222, 223, 226}
+\usepgfplotslibrary{fillbetween}
+
 
 % Semantics
 \let\cross=\times
