Update aktiv.tex, ekstrema.tex, and 2 more files...

--- a/Presentation/Frames/4_mads/hjorner.tex
+++ b/Presentation/Frames/4_mads/hjorner.tex
@@ -1,3 +1,33 @@
+%Ekstremumspunkter
+%
+\begin{frame}
+\frametitle{Hjørner}
+\begin{itemize}
+\item Ekstremumspunkter
+\begin{itemize}
+\item Ikke konveks kombination
+\end{itemize}
+\end{itemize}
+%
+\input{Frames/4_mads/ekstrema}
+\end{frame}
+%
+%Hjørnepunkt
+%
+\begin{frame}
+\frametitle{Hjørner}
+\begin{itemize}
+\item Hjørnepunkter
+\begin{itemize}
+\item Alene i fællesmængde for $\mathcal{P}$ og hyperplan.
+\end{itemize}
+\end{itemize}
+%
+\input{Frames/4_mads/hjorne}
+\end{frame}
+%
+%
+%
 \begin{frame}
 \frametitle{Hjørner}
 \begin{itemize}
