Update basal.tex, hjorne.tex, and hjorner.tex

--- a/Presentation/Frames/4_mads/hjorner.tex
+++ b/Presentation/Frames/4_mads/hjorner.tex
@@ -1,4 +1,4 @@
-%Ekstremumspunkter
+% Ekstremumspunkter
 %
 \begin{frame}
 \frametitle{Hjørner}
@@ -12,7 +12,7 @@
 \input{Frames/4_mads/ekstrema}
 \end{frame}
 %
-%Hjørnepunkt
+% Hjørnepunkt
 %
 \begin{frame}
 \frametitle{Hjørner}
@@ -26,13 +26,26 @@
 \input{Frames/4_mads/hjorne}
 \end{frame}
 %
+% Basale mulige løsninger
+%
+\begin{frame}
+\frametitle{Hjørner}
+\begin{itemize}
+\item Basale mulige løsninger
+\begin{itemize}
+\item Alle betingelser opfyldt og $n$ aktive betingelser
+\end{itemize}
+\end{itemize}
+%
+\input{Frames/4_mads/basal}
+\end{frame}
+%
 %
 %
 \begin{frame}
 \frametitle{Hjørner}
 \begin{itemize}
 \item \textbf{$nr. 4$}
-\item Ekstremumspunkter, hjørnepunkter og basale mulige løsninger
 \item Sæt 3.4 ækvivalens mellem hjørnepunkterne
 \item Bevis for løsninger i hjørnepunkter (3.8)
 \end{itemize}
