Update 3.9.tex and Simplexmetoden.tex

--- a/Presentation/Frames/3.9.tex
+++ b/Presentation/Frames/3.9.tex
@@ -17,6 +17,9 @@ Simplexmetoden
 \begin{frame}
 \frametitle{Simplexmetoden}
 \begin{itemize}
-\item Hvordan simplex afsøger hjørnepunkter.
+\item Finder en optimal løsning, så længe der findes mindst én basal mulig løsning
+\item Anvender reducerede omkostning til at forbedre løsning
+\item Problemer kan opstå
+\item 3 forskellige implementeringer.
 \end{itemize}
 \end{frame}
