--- a/Presentation/Frames/Simplexmetoden.tex
+++ b/Presentation/Frames/Simplexmetoden.tex
@@ -87,6 +87,6 @@ a_{m,1} & a_{m,2} & \cdots & a_{m,n} & 0 & 0 & \cdots  & 1  & 0 & b_{m}\\
 	\begin{itemize}
 	\item $O(mn)$
 	\end{itemize} 
-\item Typisk efter $O(m)$
+\item Typisk en løsning efter $O(m)$ iterationer
 \end{itemize}
 \end{frame}
