--- a/Presentation/Frames/4_mads/hjorner.tex
+++ b/Presentation/Frames/4_mads/hjorner.tex
@@ -99,9 +99,16 @@ u &\neq \lambda\textbf{v} + (1-\lambda)\textbf{w}
 %
 %
 \begin{frame}
-\frametitle{Ækvivalens mellem hjørner}
+\frametitle{Løsning i hjørne}
 \begin{itemize}
-\item \textbf{$nr. 4$}
-\item Bevis for løsninger i hjørnepunkter (3.8)
+\item $\textbf{u} \in Q$ er optimale løsninger til $\mathcal{P}$
+\item Antag $\textbf{u}$ ikke er ekstremumspunkt
 \end{itemize}
+%
+\begin{align*}
+\textbf{u} &= \lambda\textbf{u} + (1-\lambda)\textbf{w}\\
+\textbf{c}^T\textbf{u} &\geq y\\
+\textbf{c}^T\textbf{w} &\geq y\\
+\textbf{c}^T\textbf{u} &= \textbf{c}^T\textbf{w} = y
+\end{align*}
 \end{frame}
