--- a/Presentation/img/opti_loes1.tex
+++ b/Presentation/img/opti_loes1.tex
@@ -1,7 +1,7 @@
 \begin{figure}[H]
 \centering
 %
-\begin{tikzpicture}[scale=0.8]
+\begin{tikzpicture}%[scale=0.5]
 %
 %
 % -------------------------------------------------------
