Update Algebra.tex, Losning.tex, and 3 more files...

--- a/Presentation/Frames/Algebra.tex
+++ b/Presentation/Frames/Algebra.tex
@@ -17,6 +17,7 @@ Lineær algebra
 \item Lineær uafhængighed.
 \item Underrum.
 %Kort om Matrixsum og skalering, Transponering Matrix-vektorprodukt og matrixmultiplakation.
+\item Injektiv og surjektiv (bijektiv)
 \end{itemize}
 \end{frame}
 %%
